fixes title spacing.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,3 +93,6 @@ header nav {
 	margin-top: 15px;
 	border-top: 5px solid black
 }
+.form {
+	text-align: center;
+}
